add the part (le fichier Base, and Le fichier Layout) in the file 7.1.md

--- a/css/SASS/7.1/7.1.md
+++ b/css/SASS/7.1/7.1.md
@@ -65,3 +65,27 @@ sass/
 `– main.scss              # Main Sass file
 ```
 
+## Le fichier Base
+
+Le fichier `Base` contient le fichier de réinitialisation, les typographies etc .
+
+*   _base.scss
+
+*   _typography.scss
+
+## Le fichier Layout 
+
+Le fichier `Layout` contient tout ce qui participe à la mise en page du site ou de l'application, ce dossier
+peut avoir des feuilles de styles pour les différentes partie du site : Header, Footer, NavBar etc, le system de GRID, même les feuilles de style pour tous les formulaires.
+
+*   _header.scss
+
+*   _footer.scss
+
+*   _sidebar.scss
+
+*   _form.scss
+
+*   _navigation.scss
+
+*   _grid.scss
