replace the word (fichier) to (dossier) for 2 title in the file 7.1.md

--- a/css/SASS/7.1/7.1.md
+++ b/css/SASS/7.1/7.1.md
@@ -65,7 +65,7 @@ sass/
 `– main.scss              # Main Sass file
 ```
 
-## Le fichier Base
+## Le dossier Base
 
 Le fichier `Base` contient le fichier de réinitialisation, les typographies etc .
 
@@ -73,7 +73,7 @@ Le fichier `Base` contient le fichier de réinitialisation, les typographies etc
 
 *   _typography.scss
 
-## Le fichier Layout 
+## Le dossier Layout 
 
 Le fichier `Layout` contient tout ce qui participe à la mise en page du site ou de l'application, ce dossier
 peut avoir des feuilles de styles pour les différentes partie du site : Header, Footer, NavBar etc, le system de GRID, même les feuilles de style pour tous les formulaires.
