add the part (components and pages) in the file 7.1.md

--- a/css/SASS/7.1/7.1.md
+++ b/css/SASS/7.1/7.1.md
@@ -67,7 +67,7 @@ sass/
 
 ## Le dossier Base
 
-Le fichier `Base` contient le fichier de réinitialisation, les typographies etc .
+Le dossier `Base` contient le fichier de réinitialisation, les typographies etc .
 
 *   _base.scss
 
@@ -75,7 +75,7 @@ Le fichier `Base` contient le fichier de réinitialisation, les typographies etc
 
 ## Le dossier Layout 
 
-Le fichier `Layout` contient tout ce qui participe à la mise en page du site ou de l'application, ce dossier
+Le dossier `Layout` contient tout ce qui participe à la mise en page du site ou de l'application, ce dossier
 peut avoir des feuilles de styles pour les différentes partie du site : Header, Footer, NavBar etc, le system de GRID, même les feuilles de style pour tous les formulaires.
 
 *   _header.scss
@@ -89,3 +89,21 @@ peut avoir des feuilles de styles pour les différentes partie du site : Header,
 *   _navigation.scss
 
 *   _grid.scss
+
+## Le dossier components
+
+Pour les petits composants il y a le dossier `components`, les composants sont axés sur les widgets, le dossier contient toute sorte de modules spécifique. Il y a généralement beaucoup de fichier dans le dossier components car l'ensemble du site / de l'application est composé de petit module.
+
+*   _media.scss
+
+*   _carousel.scss
+
+*   _thumbnails.scss
+
+*   _button.scss
+
+## Le dossier pages
+
+Si vous avez des styles spécifiques à mettre, il est préférable de le mettre dans le dossier `pages`, par exemple il n'est pas rare d'avoir un style assez spécifique pour la page d'accueil, donc dans le dossier pages on va avoir : 
+
+*   _home.scss
