add 2 more example for the part (pages) in the file 7.1.md

--- a/css/SASS/7.1/7.1.md
+++ b/css/SASS/7.1/7.1.md
@@ -107,3 +107,8 @@ Pour les petits composants il y a le dossier `components`, les composants sont a
 Si vous avez des styles spécifiques à mettre, il est préférable de le mettre dans le dossier `pages`, par exemple il n'est pas rare d'avoir un style assez spécifique pour la page d'accueil, donc dans le dossier pages on va avoir : 
 
 *   _home.scss
+
+*   _contact.scss
+
+*   -about.scss
+
