add the part (themes and abstracts) in the file 7.1.md

--- a/css/SASS/7.1/7.1.md
+++ b/css/SASS/7.1/7.1.md
@@ -110,5 +110,27 @@ Si vous avez des styles spécifiques à mettre, il est préférable de le mettre
 
 *   _contact.scss
 
-*   -about.scss
+*   _about.scss
+
+## Le dossier themes
+
+Sur les grands sites / applications il n'est pas rare d'avoir des thèmes différents, c'est dans le dossier `themes` que l'on va les mettres.
+
+*   _theme.scss
+
+*   _admin.scss
+
+note : il n'est casiment pas utilisé pour la plupart des projets.
+
+## Le dossier abstracts
+
+Le dossier `abstracts` rassemble tous les outils et assistant Sass utilisé dans le projet, chaque variable globale, mixin, fonction et placeholder doit être inséré ici.
+
+*   _variables.scss
+
+*   _mixins.scss
+
+*   _functions.scss
+
+*   _placeholder.scss
 
