add the part (vendors and le fichier principale) in the file 7.1.md

--- a/css/SASS/7.1/7.1.md
+++ b/css/SASS/7.1/7.1.md
@@ -134,3 +134,32 @@ Le dossier `abstracts` rassemble tous les outils et assistant Sass utilisé dans
 
 *   _placeholder.scss
 
+## Le dossier vendors
+
+Le dossier `vendors` contient tous les fichiers css des bibliothèques et frameworks externes, jquery,bootstrap etc. 
+
+*   _bootstrap.scss
+
+*   _jquery.scss
+
+## Le fichier principale
+
+Le fichier principale, souvent nommé main.scss devrait être le seul fichier Sass qui ne commence pas avec un underscore. Ce fichier ne dois rien contenir d'autre que des imports et commentaire. Les fichiers doivent être importés en fonction du dossier dans lequel ils se trouvent dans l'ordre suivant : 
+
+*   abstracts/
+*   vendors/
+*   base/
+*   layout/
+*   components/
+*   pages/
+*   themes/
+
+Afin de présérver la lisibilité le fichier principales doit respecté ces directives : 
+
+*   Un fichier par import 
+
+*   un import par ligne
+
+*   pas de nouvelles lignes entre 2 imports du même dossier
+
+*   Une nouvelles lignes après le dernier imports du dossier 
