--- a/css/SASS/7.1/7.1.md
+++ b/css/SASS/7.1/7.1.md
@@ -1,8 +1,8 @@
 # Sass / 7.1 
 
-7 dossiers, 1 fichier. Fondamentalement il y a tout les fichiers dans 7 dossiers différent, et un seul fichier au niveau de la racine (généralement on le nomme main.scss) c'est celui qui importe tous les autres fichiers pour être compilés dans une feuille de style css
+7 dossiers, 1 fichier. Fondamentalement il y a tout les fichiers dans 7 dossiers différents, et un seul fichier au niveau de la racine (généralement on le nomme main.scss) c'est celui qui importe tous les autres fichiers pour être compilés dans une feuille de style Css
 
-Voici la compositions des dossiers
+Voici la composition des dossiers
 
 *   base/
 *   components/
@@ -16,7 +16,7 @@ et sans oublier :
 
 *   main.scss
 
-Idéalement on à quelque chose comme ça :
+Idéalement on a quelque chose comme ça :
 ```
 sass/
 |
@@ -76,7 +76,7 @@ Le dossier `Base` contient le fichier de réinitialisation, les typographies etc
 ## Le dossier Layout 
 
 Le dossier `Layout` contient tout ce qui participe à la mise en page du site ou de l'application, ce dossier
-peut avoir des feuilles de styles pour les différentes partie du site : Header, Footer, NavBar etc, le system de GRID, même les feuilles de style pour tous les formulaires.
+peut avoir des feuilles de styles pour les différentes parties du site : Header, Footer, NavBar etc, le system de GRID, même les feuilles de style pour tous les formulaires.
 
 *   _header.scss
 
@@ -90,9 +90,9 @@ peut avoir des feuilles de styles pour les différentes partie du site : Header,
 
 *   _grid.scss
 
-## Le dossier components
+## Le dossier Components
 
-Pour les petits composants il y a le dossier `components`, les composants sont axés sur les widgets, le dossier contient toute sorte de modules spécifique. Il y a généralement beaucoup de fichier dans le dossier components car l'ensemble du site / de l'application est composé de petit module.
+Pour les petits composants il y a le dossier `components`, les composants sont axés sur les widgets, le dossier contient toutes sortes de modules spécifiques. Il y a généralement beaucoup de fichiers dans le dossier components car l'ensemble du site / de l'application est composé de petit module.
 
 *   _media.scss
 
@@ -114,17 +114,17 @@ Si vous avez des styles spécifiques à mettre, il est préférable de le mettre
 
 ## Le dossier themes
 
-Sur les grands sites / applications il n'est pas rare d'avoir des thèmes différents, c'est dans le dossier `themes` que l'on va les mettres.
+Sur les grands sites / applications il n'est pas rare d'avoir des thèmes différents, c'est dans le dossier `themes` que l'on va les mettre.
 
 *   _theme.scss
 
 *   _admin.scss
 
-note : il n'est casiment pas utilisé pour la plupart des projets.
+note : il n'est quasiment pas utilisé pour la plupart des projets.
 
 ## Le dossier abstracts
 
-Le dossier `abstracts` rassemble tous les outils et assistant Sass utilisé dans le projet, chaque variable globale, mixin, fonction et placeholder doit être inséré ici.
+Le dossier `abstracts` rassemble tous les outils et assistant Sass utilisés dans le projet, chaque variable globale, mixin, fonction et placeholder doivent être insérés ici.
 
 *   _variables.scss
 
@@ -136,7 +136,7 @@ Le dossier `abstracts` rassemble tous les outils et assistant Sass utilisé dans
 
 ## Le dossier vendors
 
-Le dossier `vendors` contient tous les fichiers css des bibliothèques et frameworks externes, jquery,bootstrap etc. 
+Le dossier `vendors` contient tous les fichiers Css des bibliothèques et frameworks externes, jquery,bootstrap etc. 
 
 *   _bootstrap.scss
 
@@ -144,7 +144,7 @@ Le dossier `vendors` contient tous les fichiers css des bibliothèques et framew
 
 ## Le fichier principale
 
-Le fichier principale, souvent nommé main.scss devrait être le seul fichier Sass qui ne commence pas avec un underscore. Ce fichier ne dois rien contenir d'autre que des imports et commentaire. Les fichiers doivent être importés en fonction du dossier dans lequel ils se trouvent dans l'ordre suivant : 
+Le fichier principale, souvent nommé main.scss devrait être le seul fichier Sass qui ne commence pas avec un underscore. Ce fichier ne doit rien contenir d'autre que des imports et commentaires. Les fichiers doivent être importés en fonction du dossier dans lequel ils se trouvent dans l'ordre suivant : 
 
 *   abstracts/
 *   vendors/
@@ -154,12 +154,12 @@ Le fichier principale, souvent nommé main.scss devrait être le seul fichier Sa
 *   pages/
 *   themes/
 
-Afin de présérver la lisibilité le fichier principales doit respecté ces directives : 
+Afin de préserver la lisibilité le fichier principale doit respecter ces directives : 
 
-*   Un fichier par import 
+*   un fichier par import 
 
 *   un import par ligne
 
 *   pas de nouvelles lignes entre 2 imports du même dossier
 
-*   Une nouvelles lignes après le dernier imports du dossier 
+*   une nouvelle ligne après le dernier import du dossier 
